textarea, problem ccode weird spacing fix plez

--- a/static/style.css
+++ b/static/style.css
@@ -9,7 +9,6 @@ body {
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
-
     font-family: K2D, sans-serif;
 }
 
@@ -289,7 +288,6 @@ nav a:focus {
   margin: 0 auto;           /* Center it horizontally */
   display: flex;            /* Enable side-by-side layout */
   gap: 10px;                /* Optional spacing between columns */
-
 }
 
 .problem_container > div {
@@ -297,6 +295,21 @@ nav a:focus {
   background: #f2f2f2;      /* Optional styling */
   padding: 20px;
   box-sizing: border-box;
-  background: #012089;
+  background: #012189ab;
+  font-family: K2D, sans-serif;
   color:white;
+}
+
+pre {
+  font-family: K2D, sans-serif;
+}
+
+textarea {
+  flex: 1;      /* Optional styling */
+  padding: 20px;
+  height:400px;
+  box-sizing: border-box;
+  background: #C2ECFF;
+  font-family: K2D, sans-serif;
+  color:black;
 }
